app/pod-app-back.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-app-back
  labels:
   app: python
spec:
  containers:
  - image: ben1871/python:version2
    name: python
    ports:
    - containerPort: 8080
