app/pod-app-front.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-app-nginx
  labels:
   app: nginx
spec:
  containers:
  - image: ben1871/nginx:version2 
    name: nginx
    ports:
    - containerPort: 80
