app/service-for-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-back
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
