app/service-for-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-front
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
